test/modules/errors/assign-var-from-imported-module.chpl
module Program {
  module M { }
  import Program.M;
  var m = M;
}
